# proyecto-calidad-software

./: README.md  contrato-openapi-facundo-merino.yaml  openapi_tramites.json
.github/workflows/: release_e2e.yml  run_unittest.yml
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: jwt.py
backend/app/models/: __init__.py  archivo.py  enums.py  tramite.py
backend/app/repositories/: archivo.py  tramite.py
backend/app/routes/: archivos.py  auth.py  tramites.py
backend/app/schemas/: archivo.py  tramite.py
backend/app/services/: archivo.py  email.py  tramite.py
backend/app/storage/: base.py  fake_storage.py  local_storage.py
backend/tests/: conftest.py
backend/tests/routes/: conftest.py  test_archivos_routes.py  test_auth_routes.py  test_tramites_routes.py
backend/tests/services/: conftest.py  test_archivo_services.py  test_tramite_services.py
e2e/: test_busqueda.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: archivos.ts  auth.ts  client.ts  tramites.ts
frontend/src/components/: EstadoBadge.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  form.tsx  select.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: AdminPage.tsx  ConsultaPage.tsx  FormularioPage.tsx  LoginPage.tsx
frontend/src/types/: api.ts
